fix: corrige configuração ESLint e tipos do Framer Motion

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "next/typescript"
+    "next/core-web-vitals"
   ],
   "rules": {
     "react/no-unescaped-entities": "off",
@@ -12,6 +11,7 @@
     "@typescript-eslint/no-explicit-any": "warn"
   }
 }
+
 
 
 
