fix: corrige configuração ESLint e otimiza componentes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,7 @@
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off",
     "prefer-const": "error",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "warn"
+    "no-unused-vars": "off"
   }
 }
 
