--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "googleapis": "^128.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
