fix: corrige carregamento de imagens no Vercel
- Remove unoptimized: true do next.config.js para habilitar otimização
- Atualiza sistema de carregamento para usar paths relativos
- Melhora cache de imagens no vercel.json e _headers
- Remove propriedades unoptimized dos componentes
- Adiciona pastas de documentação ao .gitignore
- Configura headers de segurança e cache adequados

Resolve problemas de carregamento de imagens no deploy do Vercel

--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,9 @@ Videos/
 ntuser.dat*
 *.ini
 
-# Project specific folders
-Copy do Site/
-Estrutura de Desenvolvimento/
+# Project specific folders - Documentation
+"Copy do Site/"
+"Estrutura de Desenvolvimento/"
+
+# Vercel specific
+.vercel
