--- a/Public/manifest.json
+++ b/Public/manifest.json
@@ -8,9 +8,19 @@
   "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "any",
-      "type": "image/x-icon"
+      "src": "/faviconazul.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/faviconazul.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/faviconazul.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
